syntax = "proto3";
package private;
option go_package = "platform/go/proto/private";

import "shared/dynamic_setting.proto";

message EnvironmentDynamicSettings {
  string id = 1;
  int64 starting_version = 2;
  int64 ending_version = 3;
  repeated dynamic_setting.DynamicSetting dynamic_settings = 4;
}